# credit_limit_control

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
credit_limit_control/: hooks.py  modules.txt
credit_limit_control/config/: desktop.py  docs.py
credit_limit_control/credit_limit_control/doctype/overdue_limit/: overdue_limit.json  overdue_limit.py
credit_limit_control/credit_limit_control/report/customer_overdue_report/: customer_overdue_report.js  customer_overdue_report.json  customer_overdue_report.py
credit_limit_control/events/: delivery_note.py  purchase_invoice.py  purchase_order.py  sales_invoice.py  sales_order.py
credit_limit_control/fixtures/: custom_field.json
